# contextmink

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SETUP.md
.github/workflows/: ci.yml  release-artifacts.yml
docs/: setup.md
scripts/: contextmink  cross_check.sh
src/: capture.rs  cli.rs  commands.rs  config.rs  destructive_guard.rs  encoding.rs  files.rs  grep_scan.rs  hook_guard.rs  hook_snippet.rs  json_tools.rs  main.rs  outline.rs  output.rs  process_boundary.rs  sqlite.rs  tests.rs  text.rs
src/capture/: tests.rs
src/destructive_guard/: shell_parse.rs  tests.rs
src/encoding/: tests.rs
src/grep_scan/: tests.rs
src/hook_guard/: tests.rs
src/hook_snippet/: tests.rs
src/outline/: tests.rs
src/process_boundary/: tests.rs
src/text/: tests.rs
templates/: .contextmink.toml  AGENTS.contextmink.md  CLAUDE.contextmink.md
templates/scripts/: contextmink
tests/: bridge_bin.rs  cli_receipts.rs  templates.rs
