[package]
name = "contextmink"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "A transcript guard for coding agents inspecting files, text, slices, JSON, and SQLite."
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
