[package]
name = "contextmink"
version = "0.2.0"
edition = "2024"
rust-version = "1.92"
description = "A transcript guard for bounded file, text, JSON, SQLite, and command-output inspection."
license = "MIT"
readme = "README.md"
repository = "https://github.com/remiliacorporation/contextmink"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
