[package]
name = "contextmink"
version = "0.7.0"
edition = "2024"
rust-version = "1.92"
description = "A transcript guard for bounded file, text, file-structure, JSON, SQLite, and command-output inspection."
license = "MIT"
readme = "README.md"
repository = "https://github.com/remiliacorporation/contextmink"
publish = false
autobins = false

[[bin]]
name = "contextmink"
path = "src/main.rs"

[[bin]]
name = "contextmink-bridge"
path = "src/bin/contextmink_bridge.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
